# Django-boilerplate

./: .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  manage.py  pyproject.toml  run_docker.sh  run_web_service.sh
apps/core/company/: admin.py  apps.py  models.py
apps/core/store/: apps.py  models.py  store_code_gen.py  tests.py
apps/core/users/: apps.py  managers.py  models.py  tests.py
ecommerce/: settings.py  wsgi.py
ecommerce/settings/: base.py  develop.py  production.py
env_examples/: .dev.db.env.example  .dev.env.example
nginx/: nginx.conf
